# fastapi-auth

./: .env  README.md  main.py  pyproject.toml
libs/: password.py  token.py
migrations/: env.py
migrations/versions/: 1f3d4caea618_create_table_users.py
models/: user.py
router/: auth.py
